--- a/hud/index.html
+++ b/hud/index.html
@@ -50,7 +50,7 @@
 
         function addNotification(name, message, seconds) {
             let iframe = document.createElement("iframe");
-            iframe.src = "Notification/index.html?name=" + name + "&message=" + message + "&seconds=" + seconds;
+            iframe.src = "notification/index.html?name=" + name + "&message=" + message + "&seconds=" + seconds;
             iframe.style.border = "none";
 
             iframe.addEventListener("load", function () {
