--- a/hud/index.html
+++ b/hud/index.html
@@ -90,7 +90,7 @@
         }
 
         function removeFromArrayList(value) {
-            let iframe = document.querySelector("iframe[src='arraylist/index.html'']");
+            let iframe = document.querySelector("iframe[src='arraylist/index.html']");
 
             iframe.contentWindow.postMessage({
                 type: "remove",
