--- a/mainmenu/index.html
+++ b/mainmenu/index.html
@@ -65,7 +65,7 @@
             ">Exit</button>
         </div>
     </div>
-    <script src="index.js"></script>
+    <script src="background.js"></script>
 </body>
 
 </html>
