allow box to be bigger

--- a/hud/notification/index.html
+++ b/hud/notification/index.html
@@ -59,7 +59,8 @@
         }
 
         function setupBottom() {
-            document.querySelector(".bottomText").style.left = "calc(50% - " + (document.querySelector(".bottomText").offsetWidth/2) + "px)";
+            document.querySelector(".bottomText").style.left = "calc(50% - " + document.querySelector(".bottomText").offsetWidth / 2 + "px)";
+            document.querySelector(".box").style.width = document.querySelector(".bottomText").offsetWidth + "px";
         }
     </script>
 </body>
