--- a/hud/targethud/index.html
+++ b/hud/targethud/index.html
@@ -36,8 +36,7 @@
         };
 
         function toFixed(value, precision) {
-            var power = Math.pow(10, precision || 0);
-            return String(Math.round(value * power) / power);
+            return Number(value).toFixed(precision);
         }
     </script>
 </body>
