--- a/hud/targethud/index.html
+++ b/hud/targethud/index.html
@@ -30,7 +30,7 @@
 
             if(isNaN(data.health)) return;
 
-            progress.value = toFixed(data.health, 0);
+            progress.value = data.health.toFixed(0);
             progress.max = data.max;
             let img = document.querySelector("img");
             img.src = "http://cravatar.eu/helmavatar/" + data.name.replace(/ /g, '') + "/128";
@@ -38,9 +38,6 @@
             h2.innerHTML = data.name;
         };
 
-        function toFixed(value, precision) {
-            return Number(value).toFixed(precision);
-        }
     </script>
 </body>
 
