temp comment out background on mainmenu

--- a/mainmenu/index.html
+++ b/mainmenu/index.html
@@ -16,9 +16,9 @@
 </head>
 
 <body>
-    <div class="background-video">
-        <video playsinline autoplay loop muted src="https://github.com/ShatteredDisk/rickroll/raw/master/rickroll.mp4"></video>
-    </div>
+<!--    <div class="background-video">-->
+<!--        <video playsinline autoplay loop muted src="https://github.com/ShatteredDisk/rickroll/raw/master/rickroll.mp4"></video>-->
+<!--    </div>-->
 
     <div class="floating-name">
         <img onclick="
