--- a/clickgui/iframe.html
+++ b/clickgui/iframe.html
@@ -36,6 +36,9 @@
             -webkit-transition: all .3s cubic-bezier(0, 0, .2, 1);
             transition: all .3s cubic-bezier(0, 0, .2, 1);
         }
+        :root {
+            color-scheme: only light;
+        }
     </style>
 </head>
 
