--- a/clickgui/iframe.html
+++ b/clickgui/iframe.html
@@ -37,7 +37,7 @@
             transition: all .3s cubic-bezier(0, 0, .2, 1);
         }
         :root {
-            color-scheme: only dark;
+            color-scheme: dark;
         }
     </style>
 </head>
