--- a/clickgui/iframe.html
+++ b/clickgui/iframe.html
@@ -195,7 +195,6 @@
         }
 
         const ModuleLocation = {}
-        let showModule = null;
 
         function addModule(category, name) {
             if (Modules[category][name]) return;
@@ -243,11 +242,8 @@
                     ModuleLocation[module].settings[setting].value = value;
                     break;
             }
-
-            // reload module
-            if(showModule == module) {
-                showModule(module);
-            }
+            
+            if(ModuleLocation[module])
         }
 
         function setEnabled(name, enabled) {
@@ -258,7 +254,6 @@
 
         function showModule(name) {
             if (!ModuleLocation[name]) return;
-            
             const moduleSettings = document.createElement("div");
             moduleSettings.classList.add("container", "p-selection_control", "mdui-container");
             moduleSettings.innerHTML = `
@@ -319,7 +314,6 @@
                 }
             });
             document.querySelector(".shown-module").innerHTML = moduleSettings.outerHTML;
-            this.showModule = showModule;
             mdui.mutation();
         }
 
